improving font size and padding for image and sub menue

--- a/Website for Service business/index.html
+++ b/Website for Service business/index.html
@@ -51,12 +51,13 @@
       <div class="sub-header">
         <h1 class="main-title">Services</h1>
 
+        <!-- ______icons__________for__________desktop_________only_________________-->
         <div class="show-on-desktop">
-          <span class="show-on-desktop">Leave a request</span>
+          <span>Leave a request</span>
           <button class="icon-button">
             <img src="./images/ic_repair.svg" alt="Repair Status" />
           </button>
-          <span class="show-on-desktop">Repair Status</span>
+          <span>Repair Status</span>
           <button class="icon-button">
             <img src="./images/search_icon.svg" alt="Search" />
           </button>
